move styles to a css file 🎨