@@ -15,10 +15,11 @@ public class RecommendationService {
     }
 
     public String getRecommendation(String country, String activity, String mood) {
-        String message = String.format(
-            "You are acting as a travel recommendation service. Provide a destination suggestion for a user based on their preferred country: %s activity: %s and mood: %s.",
-            country, activity, mood
-        );
+        String message = """
+                You are acting as a travel recommendation service.
+                Provide a destination suggestion for a user based on their preferences.
+                They prefer %s as the country, %s as the activity, and %s as the mood.
+            """.formatted(country, activity, mood);
         PromptTemplate promptTemplate = new PromptTemplate(message);
         Prompt prompt = promptTemplate.create();
         return chatClient.call(prompt).getResult().getOutput().getContent();
